force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>This field fetches the Agent value from the quote</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Agent__c</formula>
    <label>Agent</label>
    <type>Checkbox</type>
</CustomField>