force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_AY_Course_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_AY_Course_Type__c</fullName>
    <formula>TEXT(Apttus_Config2__ProductId__r.APTS_AY_Course_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AY Course Type</label>
    <type>Text</type>
</CustomField>