force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Course_Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Number_of_Weeks__c</fullName>
    <description>This field is used for AY to capture number of weeks  from start date picker</description>
    <label>Course number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>