force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>APTS_Discount_Reason__c</fullName>
    <description>Is used in the cart to specify the reason to give a manual adjustment so it can be matched with the correct article when a booking is being created.</description>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Discount 1st Distribution</fullName>
            </value>
            <value>
                <fullName>Discount Corporation</fullName>
            </value>
            <value>
                <fullName>Discount Flight</fullName>
            </value>
            <value>
                <fullName>Discount Free Flight</fullName>
            </value>
            <value>
                <fullName>Discount VIP Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>