force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_EnableStartDateEndDate__c.field-meta.xml
<CustomField>
    <fullName>APTS_EnableStartDateEndDate__c</fullName>
    <description>This Field  Will capture weather product has start date and end date enabled</description>
    <formula>IF ( TEXT( Apttus_Config2__LineType__c ) = "Product/Service", Apttus_Config2__ProductId__r.EnableStartDateEndDate__c, Apttus_Config2__OptionId__r.EnableStartDateEndDate__c)</formula>
    <label>Enable Start Date &amp; End Date</label>
    <type>Checkbox</type>
</CustomField>