force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_HasStartDateConfigured__c.field-meta.xml
<CustomField>
    <fullName>APTS_HasStartDateConfigured__c</fullName>
    <description>This field is used to identify the BUNDLE details of the selected Product Attribute value</description>
    <formula>IF(AND(TEXT( Apttus_Config2__ProductId__r.Apttus_Config2__ProductType__c )= "Course",Apttus_Config2__AttributeValueId__r.APTS_End_Date__c &lt;> NULL) ,TRUE,FALSE)</formula>
    <label>Has StartDate Configured</label>
    <type>Checkbox</type>
</CustomField>