force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Language__c.field-meta.xml
<CustomField>
    <fullName>APTS_Language__c</fullName>
    <formula>Apttus_Config2__AttributeValueId__r.Language__c</formula>
    <label>Language (Redundant)</label>
    <type>Text</type>
</CustomField>