force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_Product_Type__c</fullName>
    <description>This field will have Product Type populated from the product which is selected on line item.</description>
    <label>Product Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>