force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_QunatityModifiable__c.field-meta.xml
<CustomField>
    <fullName>APTS_QunatityModifiable__c</fullName>
    <description>we use this field for start date VF page to check weather user can modify quantity or not</description>
    <formula>IF ( TEXT( Apttus_Config2__LineType__c ) = "Product/Service", Apttus_Config2__ProductId__r.QunatityModifiable__c, Apttus_Config2__OptionId__r.QunatityModifiable__c)</formula>
    <label>Qunatity Modifiable</label>
    <type>Checkbox</type>
</CustomField>