force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Total_Course_Weeks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Total_Course_Weeks__c</fullName>
    <description>This field fetches the value from the product configuration</description>
    <formula>Apttus_Config2__ConfigurationId__r.APTS_Total_Course_Weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Course Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>