force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__BaseExtendedPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
    <description>The base extended price is Quantity X Base Price X Term (if applicable) for individual products and options</description>
    <label>Base Extended Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>