force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the line item fields will be displayed as read only field. User is prevented from entering values for all line item fields. However the API methods or other system methods can change field values.</description>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>