force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__MinPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinPrice__c</fullName>
    <description>The minimum price that must be charged. The price can be zero.</description>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>