force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__RelatedAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedAdjustmentAmount__c</fullName>
    <description>The price adjustment amount for related item or ramp price escalation.</description>
    <label>Related/Escalator Adjustment Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>