force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__RelatedAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedAdjustmentType__c</fullName>
    <description>The price adjustment type for a related item or ramp price escalation</description>
    <label>Related/Escalator Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>% Discount</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>% Markup</fullName>
            </value>
            <value>
                <fullName>Markup Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>