force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Beginner__c.field-meta.xml
<CustomField>
    <fullName>Beginner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate weather the student is beginner or not(We added this field in line item so that we can select the field in new custom page)</description>
    <label>Beginner</label>
    <type>Checkbox</type>
</CustomField>