force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Comparative_Quote__c.field-meta.xml
<CustomField>
    <fullName>Comparative_Quote__c</fullName>
    <formula>Apttus_Config2__ConfigurationId__r.APTS_Comparative_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparative Quote</label>
    <type>Checkbox</type>
</CustomField>