force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/CourseNumberofWeeks__c.field-meta.xml
<CustomField>
    <fullName>CourseNumberofWeeks__c</fullName>
    <formula>( Apttus_Config2__EndDate__c - Apttus_Config2__StartDate__c )/7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>