force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Date_Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Format_Type__c</fullName>
    <description>This is used to create the correct Date format in the Start and End Date formula fields on the Line Item, depending on the Market.</description>
    <formula>IF(
(Market__c = "CNB") || 
(Market__c = "JPT") || 
(Market__c = "KRS") || 
(Market__c = "TWI") || 
(Market__c = "IRT") || 
(Market__c = "USB") , "DateTypeUS",
"DateTypeROW")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Format Type</label>
    <type>Text</type>
</CustomField>