force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Departure_Point__c.field-meta.xml
<CustomField>
    <fullName>Departure_Point__c</fullName>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_Departure_Point__r.Code__c</formula>
    <label>Departure Point</label>
    <type>Text</type>
</CustomField>