force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>This field is used for Price Dimension "Destination Code" that drives pricing for some products that have Price Matrices with Dimension "Destination Code". 
Note: Values of Product Codes for Destination Bundles = Destination Code</description>
    <formula>Apttus_Config2__ProductId__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Code</label>
    <type>Text</type>
</CustomField>