force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Enrollment_Fee_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Count__c</fullName>
    <formula>Apttus_Config2__ConfigurationId__r.APTS_Total_Count_Enrollment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Fee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>