force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/FixedFareSeason__c.field-meta.xml
<CustomField>
    <fullName>FixedFareSeason__c</fullName>
    <description>Fixed Fare Flight Season</description>
    <label>FixedFareSeason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>