force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Formatted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_End_Date__c</fullName>
    <formula>IF(ISBLANK(Apttus_Config2__EndDate__c), "", 

IF(Date_Format_Type__c = "DateTypeUS", 

TEXT(MONTH(Apttus_Config2__EndDate__c)) &amp; "-" &amp; TEXT(DAY(Apttus_Config2__EndDate__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Config2__EndDate__c)), 

TEXT(DAY(Apttus_Config2__EndDate__c)) &amp; "-" &amp; TEXT(MONTH(Apttus_Config2__EndDate__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Config2__EndDate__c)) 

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted End Date</label>
    <type>Text</type>
</CustomField>