force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Formatted_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Start_Date__c</fullName>
    <description>Transforms the value of the Start Date field on the PAV record; used to show on Template.</description>
    <formula>IF(ISBLANK(Apttus_Config2__StartDate__c),"",
IF(Date_Format_Type__c = "DateTypeUS",

TEXT(MONTH(Apttus_Config2__StartDate__c)) &amp; "-" &amp; TEXT(DAY(Apttus_Config2__StartDate__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Config2__StartDate__c)),

TEXT(DAY(Apttus_Config2__StartDate__c)) &amp; "-" &amp; TEXT(MONTH(Apttus_Config2__StartDate__c)) &amp; "-" &amp; TEXT(YEAR(Apttus_Config2__StartDate__c))

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Start Date</label>
    <type>Text</type>
</CustomField>