force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>This field fetches the market value from the Quote/Proposal</description>
    <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>