force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Non_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discounted_Price__c</fullName>
    <formula>IF(ISPICKVAL( Apttus_Config2__LineType__c, "Option"), Apttus_Config2__BaseExtendedPrice__c + Apttus_Config2__OptionPrice__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>