force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtype__c</fullName>
    <label>Product Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>