force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field fetches the PROGRAM picklist value from the quote</description>
    <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Program__c)</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>