force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Sequence_in_Template__c.field-meta.xml
<CustomField>
    <fullName>Sequence_in_Template__c</fullName>
    <description>Used for sorting the items in the template</description>
    <label>Sequence in Template</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>