force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/TEST_Destination__c.field-meta.xml
<CustomField>
    <fullName>TEST_Destination__c</fullName>
    <defaultValue>"NZ-AUC"</defaultValue>
    <label>TEST_Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>